--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>pageSwitch</title>
+<title>pageSwitch页面切换</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no,minimal-ui"/>
 <meta name="format-detection" content="email=no" />
 <meta name="format-detection" content="address=no" />
@@ -184,7 +184,7 @@
 			<button onclick="a.append(createPage())">后增加一页</button>
 			<button onclick="a.remove(1)">删除第2页</button>
 			<button style="color:green;" onclick="a.setEase('bounce')">回弹效果</button>
-			<button style="background-color:black;color:white;" onclick="location.href='https://github.com/qiqiboy/pageSwitch'">Github</button>
+			<button style="background-color:black;color:white;" onclick="location.href='https://github.com/sternelee/pageSwitch'">Github</button>
         </div>
     </div>
 	<script type="text/javascript" src="src/pageSwitch.js"></script>
