--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="page page3">
                 <h1>链接图片</h1>
                 <div class="box">
-                    <a href="https://github.com/qiqiboy"><img src="https://www.baidu.com/img/bd_logo1.png" /></a>
+                    <a href="https://github.com/sternelee"><img src="https://www.baidu.com/img/bd_logo1.png" /></a>
                 </div>
             </div>
             <div class="page page4">page4</div>
@@ -207,7 +207,6 @@
 	document.getElementById('tssel').onchange=function(){
 		location.href='?ts='+this.value;
 	}
-	
 	var options=document.getElementById('tssel').options,
 		i=0,op;
 	while(op=options[i++]){
